--- a/_sass/minimal-mistakes/_variables.scss
+++ b/_sass/minimal-mistakes/_variables.scss
@@ -155,9 +155,15 @@ $max-width: $x-large !default;
    Grid
    ========================================================================== */
 
+// default code
+// $right-sidebar-width-narrow: 200px !default;
+// $right-sidebar-width: 300px !default;
+// $right-sidebar-width-wide: 400px !default;
+
+// 양쪽 여백 줄인 코드
 $right-sidebar-width-narrow: 200px !default;
-$right-sidebar-width: 300px !default;
-$right-sidebar-width-wide: 400px !default;
+$right-sidebar-width: 270px !default;
+$right-sidebar-width-wide: 350px !default;
 
 /*
    Other
